--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,8 +11,6 @@ body, header, nav, footer, main, h1, div, img, ul{
 	border: 0;
 } 
 
-
-
 /* Style rules for body and images */
 body{
 	background-color: #7179f9; 	
@@ -25,6 +23,7 @@ img{
 /*moblie Veiwpoint*/
 /* Style rule for header */
 header{
+	text-align: center;
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0; 
@@ -38,6 +37,8 @@ header{
 nav{
 	padding: 1%;
 	margin-bottom: 1%;
+	background-color: #000;
+	border-radius: 100%
 }	
 
 nav ul{
@@ -47,13 +48,17 @@ nav ul{
 
 nav li{
 	font-size: 1.5em;
-	border-top: 1px solid #fff;
+	border-radius: 300%;
+}
+
+nav li:first-child{
+	border-top: none;
 }
 
 
 nav li a{
 	display: block;
-	color: ##fff;
+	color: #f60788;
 	padding: .5em 1em;
 	text-decoration: none;
 	font-family: 'Gloria Hallelujah', Arial, Sans-serif;
@@ -92,32 +97,8 @@ main{
 	display: block;
 }
 
-.hours{
-	margin-left: 10%;
-
-}
-
-.action{
-	font-size: 1.35em;
-	color:#725eb6;
-	font-weight: bold;
-}
-
-#weights, #cardio, #training{
-	margin: 0 2%;
-}
-
-.round{
-	border-radius: 8px;
-}
 
 
-
-.external-link{
-	color: #660;
-	font-weight: bold;
-	text-decoration: none;
-}
 
 contact{
 	text-align: center;
@@ -146,19 +127,10 @@ footerp a{
 	color: #fff;
 	text-decoration: none;
 }
-/*
-#exercizes{
-	clear: left;
-	border-top: 1px solid #000;
-	border-bottom: 1px solid #000;
-	background-color: #f2f2f2;
-	padding: 1% 2%;
-}
-#exercizes dt{
-	font-weight: bold;
-}
 
-#exercizes dd{
-	padding: .5% 1% 2% 0;
+
+.locked_frog {
+	border-width: 50px;
+	border-color: #f9f9f9;
+	border-radius: 70px;
 }
-*/
