--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -145,3 +145,108 @@ footerp a{
 	background-color: #4d30fc;
 	
 }
+#go {
+	
+	padding: right;
+	align-items: right;
+	border-width: .5px;
+	border-style: solid;
+	border-radius: 10px;
+	border-color: #000;
+	background-color: #000;
+	font-size: 3.40em;
+	text-align: center;
+	list-style-type: none;
+	text-decoration: none;
+	color: #fff;
+}
+#home {
+	
+	padding: right;
+	align-items: right;
+	border-width: .5px;
+	border-style: solid;
+	border-radius: 10px;
+	border-color: #000;
+	background-color: #000;
+	font-size: 3.40em;
+	text-align: center;
+	list-style-type: none;
+	text-decoration: none;
+	color: #fff;
+}
+#billy {
+	
+	padding: right;
+	align-items: right;
+	border-width: .5px;
+	border-style: solid;
+	border-radius: 10px;
+	border-color: #000;
+	background-color: #000;
+	font-size: 3.40em;
+	text-align: center;
+	list-style-type: none;
+	text-decoration: none;
+	color: #fff;
+}
+#conn {
+	
+	padding: right;
+	align-items: right;
+	border-width: .5px;
+	border-style: solid;
+	border-radius: 10px;
+	border-color: #000;
+	background-color: #000;
+	font-size: 3.40em;
+	text-align: center;
+	list-style-type: none;
+	text-decoration: none;
+	color: #fff;
+}
+#gray {
+	
+	padding: right;
+	align-items: right;
+	border-width: .5px;
+	border-style: solid;
+	border-radius: 10px;
+	border-color: #000;
+	background-color: #000;
+	font-size: 3.40em;
+	text-align: center;
+	list-style-type: none;
+	text-decoration: none;
+	color: #fff;
+}
+#santa {
+	
+	padding: right;
+	align-items: right;
+	border-width: .5px;
+	border-style: solid;
+	border-radius: 10px;
+	border-color: #000;
+	background-color: #000;
+	font-size: 3.40em;
+	text-align: center;
+	list-style-type: none;
+	text-decoration: none;
+	color: #fff;
+}
+#john {
+	
+	padding: right;
+	align-items: right;
+	border-width: .5px;
+	border-style: solid;
+	border-radius: 10px;
+	border-color: #000;
+	background-color: #000;
+	font-size: 3.40em;
+	text-align: center;
+	list-style-type: none;
+	text-decoration: none;
+	color: #fff;
+}
