--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,6 +10,10 @@ body, header, nav, footer, main, h1, div, img, ul{
 	padding: 0;
 	border: 0;
 } 
+h2{
+	font-size: 45px;
+	text-align: center;
+}
 
 /* Style rules for body and images */
 body{
@@ -184,7 +188,6 @@ a{
 	font-size: 3.40em;
 	text-align: right;
 	list-style-type: none;
-	text-decoration
 	
 
 }
