--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,7 +11,7 @@ body, header, nav, footer, main, h1, div, img, ul{
 	border: 0;
 } 
 h1{
-	font-size: 45px;
+	font-size: 35px;
 	text-align: center;
 }
 
@@ -25,7 +25,9 @@ img{
 }
 
 /*moblie Veiwpoint*/
+
 /* Style rule for header */
+
 header{
 	position: static;
 	text-align: center;
@@ -79,6 +81,7 @@ nav li:first-child{
 
 nav li a:hover{
 		opacity: .5;
+		transform: translateY(-5px);
 		
     }
 	.frame{
@@ -134,6 +137,7 @@ main{
 
 
 
+
 contact{
 	text-align: center;
 }
@@ -169,6 +173,8 @@ footerp a{
 	border-radius: 15px;
 	border-color: #3f4366;
 	background-color: #3f4366;
+	width: 35%;
+	height: 20%;
 	
 }
 
@@ -213,5 +219,21 @@ a{
 @keyframes sock{
 	0% {transform: translateX(0);}
 	100% {transform: translateX(-500%);}		
+}
+@media screen and (min-width: 795px){
+.tablet-desktop{
+	display: block;
+}
+
+header{
+	position: static;
+	text-align: center;
+	top: 0; 
+	background-color: #595f9c;
+	height: 190px;
+	font-family: "Gloria Hallelujah";
+	padding: 1%;
+	border: 3;
+}
 }
 
