--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,58 +1,274 @@
-<!DOCTYPE html>
-<!--thos website template was created by Sam"-->
-<html lang="en">
-<head>
-	<title>Portfolio</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" 
-	href="CSS/styles.css"
-	type="text/css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="images/file.png">
+/*
+author: Samantha
+Date: 9/10/2024
 
-</head>
-<body>
+*/
 
-	<!--use the header area for the website name or logo-->
+/* CSS RESET */
+body, header, nav, footer, main, h1, div, img, ul{
+	margin: 0;
+	padding: 0;
+	border: 0;
+} 
+h1{
+	font-size: 35px;
+	text-align: center;
+}
 
-	<header>
-		<h1>Sam's Portfolio</h1>
+/* Style rules for body and images */
+body{
+	background-color: /*#7179f9*/ #595f9c; 	
+}
+img{
+	max-width: 100%;
+	display: block;
+}
+
+/*moblie Veiwpoint*/
+
+/* Style rule for header */
+
+header{
+	position: static;
+	text-align: center;
+	top: 0; 
+	background-color: #595f9c;
+	height: 190px;
+	font-family: "Gloria Hallelujah";
+	padding: 1%;
+	border: 3;
+}
+h1{
+	font-size: 5em;
+}
+
+
+
+/* stlye rules for navagation */ 
+nav{
+	position: static;
+	position: static;
+	padding: 0.5%;
+	margin-bottom: 1%;
+	background-color: #121317;
+	color: #989ab3;
+	
+}	
+
+nav ul{
+	position: static;
+	position: static;
+	list-style-type: none;
+	text-align: center;
+}
+
+nav li{
+	position: static;
+	position: static;
+	font-size: 1.5em;
+	
+}
+
+nav li:nth-child(even){
+	background-color: #242636; 
+}
+
+nav li:first-child{
+	position: static;
+	position: static;
+	border-top: none;
+}
+
+nav li a:hover{
+		opacity: .5;
+		transform: translateY(-5px);
 		
-	</header>
-	<!--Use the nav area to add hyperlinks to other pages within the website-->
-			<a class="menu-icon" onclick="hamburger()">
-				<div>&#9776;</div>
-		</nav>
-	<nav>
-<ul>
-	<li><a href="index.html">Home</a></li>
-	<li><a href="about.html">About Me</a></li>
-	<li><a href="assignments.html">Assignments</a></li>
-	<li><a href="extras.html">Extras</a></li>
-	<li><a href="contact-us.html">Contact Me</a></li>
-</ul>
-</nav>
+    }
+	.frame{
+		opacity: 1;
+	}
 
+	.frame:hover{
+		opacity: .9;
+	}
+
+
+nav li a{
+	display: block;
+	color:  #6b6786;
+	padding: .90em 1em;
+	text-decoration: none;
+	font-family: 'Gloria Hallelujah', Arial, Sans-serif;
+}
+
+/*show moblie class, hide tablet deskop class */
+
+.moblie{
+	display: block;
+}
+.tablet-desktop{
+	display: none;
+}
+
+/* Style rule for main */
+main{
+	background-color: ##7179f9; 
+	padding: 2%;
+	font-size: 1.15em;
+	font-family: 'Gloria Hallelujah', Arial, Sans-serif;
+}
+
+.tel-link{
+	background-color: #7179f9;
+	padding: 2%;
+	margin: 0 auto; 
+	width: 80%; 
+	text-align: center;
+	border-radius: 5px;
+}
+
+.tel-link a{
+	color: #fff;
+	text-decoration: none;
+	font-size: 1.5em;
+	display: block;
+}
+
+
+
+
+
+contact{
+	text-align: center;
+}
+
+contact .contact-email-link{
+	color:#660;
+	text-decoration: none;
+}
+
+map{
+	border: 2px solid #000;
+	width: 95%;
+	height: 50%;
+}
+table{
+		border: solid 1px #000;
+		margin: 0 auto;
+		width: 100%;
+		border-collapse: collapse;
+	}
+
+	caption{
+		font-size: 1.5em;
+		font-weight: bold;
+		padding: 1%;
+	}
+
+	th, td{
+		border: solid 1px #000;
+		padding: 2%;
+	}
+
+	th{
+		background-color: #000;
+		color: #fff;
+		font-size: 1.15em;
+	}
+
+	tr:nth-child(odd){
+		background-color: #ccc;
+	}
+
+	form{
+		width: 70%;
+		margin: 0 auto;
+	}
+	right{
+		background-color: #fff;
+	}
+
+/*Style rule for footer content*/
+footer p{
+	font-size: .75em;
+	text-align: center;
+	color: #fff;
+	padding: 0 1em;
+}
+
+footerp a{
+	color: #fff;
+	text-decoration: none;
+}
+
+
+.locked_frog {
+	border-width: 15px;
+	border-style: solid;
+	border-radius: 15px;
+	border-color: #3f4366;
+	background-color: #3f4366;
+	width: 35%;
+	height: 20%;
 	
-	<!-- use the main area to add the main content of the page-->
-	<main>
-	<audio controls loop>
-	<source src="video/cultoflamb.mp3" type="audio/mp3">
-	<p>your browser does not support the audio equipment.</p>
-	</audio>
-	<p>may i offer you some music?</p>
-		<img class="locked_frog" img src="images/babes.jpg" alt="green" height="490" width="650">
-	</main>
+}
+
+a{
+	text-decoration: none;
+	color: #fff;
+}
+
+.shoe, .pizza{
+	padding: right;
+	text-align: right;
+	border-width: .5px;
+	border-style: solid;
+	border-radius: 10px;
+	border-color: #000;
+	background-color: #000;
+	font-size: 3.40em;
+	text-align: right;
+	list-style-type: none;
 	
-	<!-- use the footer area to add webpage content of the page-->
-	<footer>
-		<p>&copy; Copyright 2024. All Rights Reserved. </p>
-		<p>Samantha.Martin@stu.cvccworks.edu</p>
-	</footer>
-	<script src="scripts/script.js">
-</script>
-</body>
-</html>
+
+}
+
+.pizza{
+	text-align: left;
+	
+	animation: cheese 600s linear infinite;
+	
+}
+
+.shoe{
+	animation: sock 600s linear infinite;
+}
+
+@keyframes cheese{
+	0% {transform: translateX(0);}
+	/*50%{transform: rotate(180deg);}
+	100%{transform: rotate(360deg);}*/
+	100% {transform: translate(500%);}		
+}
+
+@keyframes sock{
+	0% {transform: translateX(0);}
+	100% {transform: translateX(-500%);}		
+}
+@media screen and (min-width: 795px){
+.tablet-desktop{
+	display: block;
+}
+
+header{
+	position: static;
+	text-align: center;
+	top: 0; 
+	background-color: #595f9c;
+	height: 190px;
+	font-family: "Gloria Hallelujah";
+	padding: 1%;
+	border: 3;
+}
+}
+
